--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,55 @@
+[tool.poetry]
+# I use poetry as just a package manager.
+# So, I only write the settings that poetry needs.
+# The actual package metadata is written in setup.cfg.
+# I use pypa/build for packaging.
+name = "python-template-analysis"
+version = "0.0.0"
+description = ""
+authors = []
+packages = [
+    { include = "template_analysis" },
+]
+
+[tool.poetry.dependencies]
+python = "^3.7"
+
+[tool.poetry.group.dev.dependencies]
+black = "*"
+pytest = "*"
+isort = "*"
+pyupgrade = "*"
+pytest-cov = "*"
+flake8 = "*"
+mypy = "*"
+poethepoet = "*"
+setuptools-scm = "*"
+build = "*"
+
 [build-system]
 requires = ["setuptools",  "setuptools_scm"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
 write_to = "template_analysis/_version.py"
+
+[tool.poe.tasks]
+test = "pytest"
+coverage-xml = "pytest --cov=template_analysis --doctest-modules --cov-report=xml"
+format = [
+    { cmd = "isort template_analysis"},
+    { cmd = "black template_analysis"},
+    { cmd = "pyupgrade --py37-plus template_analysis/*.py"},
+]
+check = [
+    { cmd = "isort --check-only --diff template_analysis"},
+    { cmd = "black --check --diff template_analysis"},
+    { cmd = "flake8 template_analysis"},
+    { cmd = "mypy template_analysis"},
+]
+build = [
+    { cmd = "python -m build"}
+]
 
 [tool.mypy]
 # https://mypy.readthedocs.io/en/latest/config_file.html
