--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,9 @@ packages = [
 python = "^3.9"
 
 [tool.poetry.group.dev.dependencies]
-black = "*"
+ruff = "*"
 pytest = "*"
-isort = "*"
-pyupgrade = "*"
 pytest-cov = "*"
-flake8 = "*"
-mypy = "*"
 poethepoet = "*"
 setuptools-scm = "*"
 build = "*"
@@ -36,17 +32,8 @@ write_to = "template_analysis/_version.py"
 [tool.poe.tasks]
 test = "pytest"
 coverage-xml = "pytest --cov=template_analysis --doctest-modules --cov-report=xml"
-format = [
-    { cmd = "isort template_analysis"},
-    { cmd = "black template_analysis"},
-    { cmd = "pyupgrade --py37-plus template_analysis/*.py"},
-]
-check = [
-    { cmd = "isort --check-only --diff template_analysis"},
-    { cmd = "black --check --diff template_analysis"},
-    { cmd = "flake8 template_analysis"},
-    { cmd = "mypy template_analysis"},
-]
+format = "ruff format template_analysis"
+check = "ruff check template_analysis"
 build = [
     { cmd = "python -m build"}
 ]
@@ -65,12 +52,5 @@ no_implicit_optional = true
 warn_unused_ignores = true
 warn_return_any = true
 
-[tool.isort]
-multi_line_output = 3
-include_trailing_comma = true
-
-[tool.black]
+[tool.ruff]
 line-length = 79
-
-[tool.flake8]
-max-line-length = 79
