--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,7 @@ name = "python-template-analysis"
 version = "0.0.0"
 description = ""
 authors = []
-packages = [
-    { include = "template_analysis" },
-]
+packages = [{ include = "template_analysis" }]
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -21,9 +19,10 @@ pytest-cov = "*"
 poethepoet = "*"
 setuptools-scm = "*"
 build = "*"
+mypy = "*"
 
 [build-system]
-requires = ["setuptools",  "setuptools_scm"]
+requires = ["setuptools", "setuptools_scm"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
@@ -33,24 +32,16 @@ write_to = "template_analysis/_version.py"
 test = "pytest"
 coverage-xml = "pytest --cov=template_analysis --doctest-modules --cov-report=xml"
 format = "ruff format template_analysis"
-check = "ruff check template_analysis"
-build = [
-    { cmd = "python -m build"}
+check = [
+    { cmd = "ruff check template_analysis" },
+    { cmd = "mypy template_analysis" },
 ]
+build = [{ cmd = "python -m build" }]
 
 [tool.mypy]
 # https://mypy.readthedocs.io/en/latest/config_file.html
-ignore_missing_imports = true
-disallow_any_decorated = true
-disallow_subclassing_any = true
-disallow_untyped_calls = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-disallow_untyped_decorators = true
-no_implicit_optional = true
-warn_unused_ignores = true
-warn_return_any = true
+strict = true
+ignore_missing_imports = false
 
 [tool.ruff]
 line-length = 79
