--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,42 @@
-[tool.poetry]
-# I use poetry as just a package manager.
-# So, I only write the settings that poetry needs.
-# The actual package metadata is written in setup.cfg.
-# I use pypa/build for packaging.
-name = "python-template-analysis"
-version = "0.0.0"
-description = ""
-authors = []
-packages = [{ include = "template_analysis" }]
+[project]
+name = "throttle-controller"
+dynamic = ["version"]
+requires-python = ">=3.9"
+dependencies = []
+description = "Create template from strings (reverse template engine)"
+readme = {file = "README.md", content-type = "text/markdown"}
+license = { file = "LICENSE" }
+authors = [
+    {name = "Yui KITSU", email = "kitsuyui+github@kitsuyui.com"}
+]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "License :: OSI Approved :: BSD License",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Libraries",
+]
 
-[tool.poetry.dependencies]
-python = "^3.9"
+[project.urls]
+Homepage = "https://github.com/kitsuyui/python-template-analysis"
 
-[tool.poetry.group.dev.dependencies]
-ruff = "*"
-pytest = "*"
-pytest-cov = "*"
-poethepoet = "*"
-setuptools-scm = "*"
-build = "*"
-mypy = "*"
+[tool.setuptools]
+package-data = { "template_analysis" = ["py.typed"], "*" = ["README.md, LICENSE"] }
+package-dir = { "template_analysis" = "template_analysis" }
+
+[tool.uv]
+dev-dependencies = [
+    "pytest",
+    "pytest-cov",
+    "poethepoet",
+    "setuptools-scm",
+    "ruff",
+    "mypy",
+]
 
 [build-system]
 requires = ["setuptools", "setuptools_scm"]
@@ -27,6 +44,8 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
 write_to = "template_analysis/_version.py"
+version_scheme = "only-version"
+local_scheme = "no-local-version"
 
 [tool.poe.tasks]
 test = "pytest"
